Correct bug in asteroidsList, remove unused calls to dotenv

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -46,6 +46,7 @@
 
             <div id="asteroidDiv" class="hide">
                 <h3 id="asteroidMessage" class="hide"></h3>
+                <div id="asteroidsList"></div>
             </div>
             
             <div id="marsDiv" class="center hide">
