Implement upload of APOD to space-pics-2 bucket

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -33,6 +33,7 @@
                     <iframe id="iframe" src="" crossorigin="anonymous" frameborder="0" height="600" width="700"></iframe>
                 </div>
                 <p id="APODCopyright"></p>
+                <button id="saveToS3" class="hide">Save to S3</button>
             </div>
         </div>
             
@@ -67,9 +68,9 @@
         </div>
 
         {{>footer}}
-
-        <script src="/js/app.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+     
+        <script src="/js/app.js"></script> 
+     
     </body>
 
 </html>
